# CITS3403-Group-Project

./: .gitignore  LICENSE  README.md  clean_demo_data.py  gunicornconfig.py  index.html  login.css  login.html  main.py  my_stats.html  project-agile.html  pyproject.toml  requirements.txt  seed_demo_data.py  seed_demo_user_information.txt  tailwind.js  test_branch.html
CSS/: bento_stats_styles.css  general_styles.css  globe_styles.css  my_friends.css  stats_styles.css
HTML/: index.html  my_friends.html  my_stats.html  others_stats.html
JS/: globe.js
Reference Website Ideas/: Famous Fox Federation _ The most famous NFTs on the blockchain.html  Rainbow _ Fun, powerful, and secure crypto wallets.html  Sleepagotchi - App for Sleep.html  Upland.html  UplandMe-GLOBE IDEA.html
Reference Website Ideas/Famous Fox Federation _ The most famous NFTs on the blockchain_files/: index-CZUD2h_D.css  index.css  js
Reference Website Ideas/Rainbow _ Fun, powerful, and secure crypto wallets_files/: chat.bundle.js.download  gtm.js.download  js  saved_resource.html  script_main.G4EGDTZA.mjs
Reference Website Ideas/Sleepagotchi - App for Sleep_files/: layoutCss  layoutCss(1)  main.949435bc.bundle.min.js.download  rb_wixui.thunderbolt[Container_AppleArea].a31f6a2e.bundle.min.js.download  thunderbolt-commons.2d8c1070.bundle.min.js.download
app/: __init__.py  auth.py  models.py  views.py
demo/: clean_demo_data.py  seed_demo_data.py
instance/: database.db
seed-demo/: clean_demo_data.py  seed_demo_data.py
templates/: login.html  signup.html
tests/: test_app.py  unitTests.py
(+102 files in other folders)
