[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cits3403-group-project"
version = "0.1.0"
description = "A group project for CITS3403"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic==1.15.2",
    "blinker==1.9.0",
    "click==8.1.8",
    "Flask==3.1.0",
    "Flask-wtf==1.2.1",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "importlib_metadata==8.7.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "joblib==1.5.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "numpy==2.0.2",
    "scikit-learn==1.6.1",
    "scipy==1.14.1",
    "SQLAlchemy==2.0.40",
    "threadpoolctl==3.6.0",
    "typing_extensions==4.13.2",
    "Werkzeug==3.1.3",
    "zipp==3.21.0",
    "Selenium==4.21.0",
    "gunicorn==21.2.0"
]